# tethys

./: .gitignore  .gitmodules  .travis.yml  COPYING  IrcLog  Makefile  README  README.md  aclocal.m4  build  buildsys.mk.in  buildsys.module.mk  configure  configure.ac  extra.mk.in  mkrelease
doc/: micro.conf.example  micro.conf.flat  old.txt  tethys.conf.example  tethys.conf.flat  ts6-summary.txt  uirc.txt  wide.txt
help/: Makefile  README
help/opers/: cmode  cmodes  kill  umode
help/users/: cmode  cmodes  extban  mode  nick  notice  privmsg  umode
include/: Makefile  auth.h  autoconf.h.in  base64.h  chan.h  conf.h  conn.h  connection.h  cookie.h  crypto.h  dns.h  entity.h  hash.h  heap.h  hook.h  io.h  ircd.h  linebuf.h  link.h  list.h  log.h  map.h  mode.h  module.h  msg.h  ratelimit.h  sendq.h  sendto.h  server.h  string.h  strop.h  toplev.h  trie.h  upgrade.h  user.h  util.h  version.h  vsnf.h
m4/: buildsys.m4
modules/: Makefile
modules/contrib/: Makefile  c_42.c  hello.c
modules/core/: Makefile  away.c  bmask.c  c_42.c  cap.c  challenge.c  connect.c  euid.c  hello.c  help.c  hunted.c  invite.c  join.c  kick.c  kill.c  list.c  map.c  message.c  mkpass.c  mode.c  module.c  names.c  nick.c  numeric.c  oper.c  part.c  pass.c  ping.c  quit.c  sid.c  sjoin.c  squit.c  stats.c  su.c  tb.c  topic.c  ts6init.c  upgrade.c  user.c  userhost.c  (+2 more)
modules/extra/: Makefile  alias.c  logchan.c  pseudoclient.c
src/: BSDmakefile  Makefile  auth.c  base64.c  c_generic.c  c_hunted.c  c_message.c  c_nick.c  c_reg.c  c_server.c  c_ureg.c  c_user.c  chan.c  conf.c  conn.c  connection.c  cookie.c  crypto.c  dns.c  entity.c  hash.c  heap.c  hook.c  io.c  linebuf.c  link.c  list.c  log.c  main.c  map.c  mode.c  module.c  msg.c  numeric.awk  numeric.tab  probe_crypt.c  ratelimit.c  sendq.c  sendto.c  server.c  (+8 more)
test/: log_stubs.c
test/conn/: Makefile  echo.c
test/map/: .gitignore  Makefile  gentest.py  map.c  test1.txt  test1.txt.out  test2.txt  test2.txt.out  test3.txt  test3.txt.out  test4.txt  tests.sh  (+7 more)
(+4 files in other folders)
